@@ -1,3 +1,8 @@
+2011-02-15 Yu-Sung Su     <suyusung@tsinghua.edu.cn> 
+   * DESCRIPTION (Version, Date): 0.09-13
+   * R/mi.scatterplot: reactivated imputed points 
+   
+   
 2011-02-09 Yu-Sung Su     <suyusung@tsinghua.edu.cn> 
    * DESCRIPTION (Version, Date): 0.09-12
 
